--- a/css/style.css
+++ b/css/style.css
@@ -6,164 +6,323 @@
 
 :root {
     /* Colors */
-    --primary: #00B98E;
-    --dark-primary: #044738;
-    --secondary: #FF6922;
-    --light: #EFFDF5;
-    --dark: #0E2E50;
+    --primary: #651FFF;
+    --dark-primary: #0B0D0E;
+    --main-text: #838696;
+    --sub-text: #5C5F6E;
+    --flexbox-bg: #ECECFE;
+    --secondary-bg: #FAFAFA;
+    --hero-bg: #E0F7FA;
+    --dark: #1A284E;
     --black: #000;
     --white: #fff;
 
     /* Fonts families */
-    --ff-poppins: "Poppins", sans-serif;
-    --ff-roboto: "Roboto", sans-serif;
+    --ff-Sofia-Pro: "Sofia Pro", sans-serif;
 
-    /* font-sizes */
-    --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
-    --fs-800: 3.5rem;
-    --fs-700: 1.5rem;
-    --fs-600: 1.1rem;
-    --fs-500: 1rem;
-    --fs-400: 0.9375rem;
-    --fs-300: 0.875rem;
-    --fs-200: 0.7rem;
+    --fs-900: 50px;
+    --fs-800: 38px;
+    --fs-700: 32px;
+    --fs-600: 24px;
+    --fs-500: 18px;
+    --fs-400: 16px;
+    --fs-300: 14px;
+
+    /* line-height */
+    --lh-400: 64px;
+    --lh-300: 36px;
+    --lh-200: 32px;
+    --lh-100: 24px;
 }
+
 
 body {
-    font-family: var(--ff-poppins);
-}
-
-.container {
-    width: 90%;
-    margin: 0 auto;
-    position: relative;
-}
-
-/* subject to be removed */
-.home-title h1 {
-    margin-top: 1rem;
-}
-
-.service-title h1 {
-    color: var(--dark);
-    text-align: center;
-}
-
-.service-title > p {
-    text-align: center;
-}
-
-#contact {
-    color: var(--white);
-    background: var(--primary);
-    /* width: 100%; */
-}
-
-.site-footer {
-    background-color: var(--dark-primary);
-    color: var(--white);
-    padding: .7rem 0;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-}
-
-.site-footer p {
-    font-size: var(--fs-200);
-    margin: 0;
-}
-
-
-
-/* ------------- */
-/* Sign Up page */
-/* ----------- */
-
-.row > h2 {
-    background: var(--primary);
-    color: var(--white);
-    font-size: 1.2rem;
-    text-align: center;
-    padding: 1.2rem 0 1rem;
-    margin-top: 0;
-}
-
-.form {
-    width: min(600px, 50%);
-    background: var(--white);
-    position: relative;
-    margin: 1.5rem auto;
-    padding: 1rem 2rem;
-    transition: .5s;
-    z-index: 9999;
-    box-shadow: 0 0 30px rgba(0, 0, 0, .09);
-}
-
-.form > * {
-    margin-bottom: 0.5rem;
-}
-
-.d-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: .8rem;
-}
-
-.d-block {
-    font-size: var(--fs-200);
-    text-align: center;
-}
-
-label {
-    display: flex;
-    flex-direction: column;
+    font-family: var(--ff-Sofia-Pro);
+    margin: auto;
+    color: var(--sub-text);
     font-size: var(--fs-400);
 }
 
-input,
-select {
-    padding: 0.5rem 1rem;
-    outline: none;
-    border: var(--primary) 1px solid;
-    border-radius: 5px;
+a {
+    text-decoration: none;
 }
 
-input::placeholder {
-     color: rgb(150, 147, 147);
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
 }
 
-#sign-up-btn,
-#login-btn {
-    padding: 0.5rem 0;
-    width: 100%;
-    color: var(--white);
-    background: var(--primary);
-    border-radius: 5px;
-    margin-top: .5rem;
+.flex-max {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+
+.gap * {
+    margin-bottom: .5em;
+}
+
+.gap-max * {
+    margin-bottom: 1em;
+}
+
+button {
     border: none;
     outline: none;
     cursor: pointer;
 }
 
-#sign-up-btn:hover,
-#login-btn:hover {
-    background: var(--dark-primary);
+.nav-menu {
+    font-size: var(--fs-400);
+    padding: 1em .5em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-@media only screen and (max-width: 1100px) {
-    .form {
-        width: min(800px, 80%);
-        border-radius: 5px;
-        z-index: -9999;
-        box-shadow: 0 0 30px rgba(0, 0, 0, .08);
-    }
+.logo {
+    width: 169px;
+    height: 40px;
 }
 
-@media only screen and (max-width: 600px) {
-    .d-grid {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: .8rem;
-    }
+.nav-link {
+    margin-left: 1em;
+    color: var(--sub-text);
+}
+
+.create-account,
+.sign-in,
+.btn-1,
+.btn-2 {
+    padding: .5em 1em;
+    border-radius: .5em;
+    background-color: var(--primary);
+    color: var(--white);
+}
+
+.sign-in {
+    background-color:var(--white);
+    color: var(--dark-primary);
+    border: var(--dark-primary) 2px solid;
+}
+
+.btn-2 {
+    background-color: var(--secondary-bg);
+    color: var(--dark-primary);
+    border: var(--dark-primary) .1em solid;
+    margin-left: 1em;
+}
+
+
+section {
+    display: flex;
+    background-color: var(--secondary-bg);
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    width: 80%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 1.5em;
+    position: relative;
+}
+
+.section-one,
+.section-seven {
+    width: 100%;
+    background-color: var(--hero-bg);
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border: #000 1px solid; */
+}
+
+.section-one .left-section h1,
+.header h1 {
+    font-size: var(--fs-900);
+    color: var(--dark-primary);
+    line-height: var(--lh-400);
+    letter-spacing: -0.05em;
+}
+
+.section-one .left-section p {
+    line-height: var(--lh-200);
+    width: 42ch;
+    letter-spacing: -0.02em;
+    margin-bottom: 1.5em;
+}
+
+.right-section .hero-img{
+    width: 500px;
+    height: 576px;
+    /* margin-left: 2em; */
+}
+
+.section-two .container > * {
+    margin-top: 1em;
+}
+
+.header h1 {
+    text-align: center;
+    font-size: var(--fs-800);
+    line-height: var(--lh-400);
+    color: var(--dark-primary);
+    letter-spacing: -0.04m;
+}
+
+.header p {
+    text-align: center;
+    font-size: var(--fs-500);
+    line-height: 28px;
+}
+
+.section-two .boxes {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section-two .boxes .box {
+    box-shadow: 0px 4px 24px 0px #00000005;
+    background-color: var(--white);
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.section-two .boxes .box img {
+    width: 36px;
+    height: 32px;
+    background-color: #ECECFE;
+    border-radius: 50%;
+    padding: .5em;
+    /* top: 1213px;
+    left: 203px; */
+}
+
+.section-two .boxes .box h2 {
+    color: var(--dark-primary);
+    font-size: var(--fs-600);
+    line-height: var(--lh-200);
+}
+
+.section-two .boxes .box p {
+    font-size: var(--fs-400);
+    line-height: var(--lh-100);
+    width: 25ch;
+}
+
+.section-three .left-section img{
+    width: 563px;
+    height: 563px;
+}
+
+.section-four .boxes {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+}
+
+.section-four .boxes .how-box {
+    display: flex;
+}
+
+.section-four .boxes > *{
+    background-color: var(--flexbox-bg);
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.section-four .boxes .how-box > img {
+    width: 36px;
+    height: 36px;
+    display: flex;
+}
+
+.section-four .boxes .how-box h2 {
+    font-size: var(--fs-400);
+    color: var(--dark-primary);
+}
+
+.section-four .boxes .items {
+    margin-left: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-four .boxes .items > img {
+    width: 16px;
+    height: 16px;
+}
+
+.section-four .boxes .items > * {
+    display: flex;
+    gap: .5em;
+    margin-bottom: .5em;
+}
+
+.section-five,
+.section-eight,
+.section-five h1 {
+    color: var(--white);
+    background-color: var(--dark);
+}
+
+.section-five .container > .insomnia-img {
+    width: 56px;
+    height: 56px;
+}
+
+.section-five img .code-img {
+    width: 850px;
+    height: 545.61px;
+}
+
+.btn {
+    padding: .5em;
+    color: var(--white);
+    background-color: var(--dark);
+    border: 1px solid var(--white);
+    border-radius: 8px;
+}
+ /* 
+.grid-1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+}
+
+.first-place {
+    grid-area: 'first-place';
+}
+
+.second-place {
+    grid-area: 'second-place';
+}
+
+.grid-2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+    grid-template-areas: 'first-place first-place second-place';
+} */
+
+.section-seven img {
+    width: 400px;
+    height: 400px;
+}
+
+footer {
+    display: flex;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
 }
